# gorn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/framebuffer/assets/: glass.fsh  sepia.fsh  sprite.fsh
examples/framebuffer/proj.android/: AndroidManifest.xml  build.gradle
examples/framebuffer/proj.linux/: CMakeLists.txt
examples/framebuffer/proj.windows/: gorn_framebuffer.sln  gorn_framebuffer.vcxproj
examples/framebuffer/src/: Application.cpp
examples/frustum/assets/: shader.fsh  shader.vsh
examples/frustum/proj.android/: AndroidManifest.xml  build.gradle
examples/frustum/proj.linux/: CMakeLists.txt
examples/frustum/proj.windows/: GornQueue.vcxproj  gorn_frustrum.sln  gorn_frustrum.vcxproj
examples/frustum/src/: Application.cpp
examples/hello/: Application.cpp  CMakeLists.txt  hello.fsh  hello.vsh
examples/hello/proj.linux/: CMakeLists.txt  hello
examples/kitten/: Application.cpp  files  shader.vsh
examples/kitten/assets/: shader.fsh  shader.vsh
examples/kitten/proj.android/: AndroidManifest.xml  build.gradle  settings.gradle
examples/kitten/proj.linux/: CMakeLists.txt  kitten  kitten.trace
examples/kitten/proj.windows/: gorn_kitten.sln
examples/kitten/src/: Application.cpp
examples/label/: Application.cpp
examples/label/proj.linux/: CMakeLists.txt
examples/queue/: Application.cpp
examples/queue/SOIL2/: SOIL2.vcxproj  SOIL2.vcxproj.filters
examples/queue/assets/: shader.vsh
examples/queue/proj.android/: build.gradle
examples/queue/proj.linux/: CMakeLists.txt
examples/queue/proj.windows/: GornQueue.sln  GornQueue.vcxproj  GornQueue.vcxproj.filters  gorn_queue.sln
examples/queue/src/: Application.cpp
examples/sprite/: Application.cpp
examples/sprite/proj.linux/: CMakeLists.txt
examples/stencil/assets/: shader.fsh  shader.vsh
examples/stencil/proj.android/: AndroidManifest.xml  build.gradle  release.keystore
examples/stencil/proj.linux/: CMakeLists.txt
examples/stencil/proj.windows/: gorn_stencil.sln  gorn_stencil.vcxproj
examples/stencil/src/: Application.cpp
examples/teapot/assets/: diffuse.fsh  diffuse.vsh
examples/teapot/proj.android/: AndroidManifest.xml  build.gradle  settings.gradle
examples/teapot/proj.linux/: CMakeLists.txt
examples/teapot/proj.windows/: gorn_teapot.sln  gorn_teapot.vcxproj
examples/teapot/src/: Application.cpp
examples/triangle/: Application.cpp  shader.fsh  shader.vsh
examples/triangle/assets/: shader.vsh
examples/triangle/proj.android/: .gitignore  AndroidManifest.xml  build.gradle
examples/triangle/proj.linux/: CMakeLists.txt  hello  triangle
examples/triangle/proj.windows/: gorn_triangle.sln  gorn_triangle.vcxproj.filters
examples/triangle/src/: Application.cpp
lib/glfw/: CMakeLists.txt
lib/glm/: CMakeLists.txt
proj.android/: android_build.conf  android_build.conf.sample  android_build.py  build.gradle
proj.android/OpenglGame/: AndroidManifest.xml  ant.properties  build.xml  local.properties
proj.android/OpenglGame/jni/: Android.mk  Application.mk
proj.android/gorn/: AndroidManifest.xml  ant.properties  build.gradle
proj.android/gorn/jni/: Android.mk  Application.mk
proj.android/gorn/src/: MainActivity.java  NativeBridge.java
proj.android/jni/: Android.mk
proj.android/src/: MainActivity.java
proj.ios/gorn.xcodeproj/: project.pbxproj
proj.ios/gorn.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
proj.ios/gornTests/: Info.plist
proj.linux/: CMakeLists.txt  hello
proj.linux/examples/hello/: hello
proj.linux/lib/glfw/: cmake_uninstall.cmake
proj.linux/lib/glfw/src/: glfw3.pc  glfw_config.h
proj.windows/: gorn.sln  gorn.vcxproj  gorn.vcxproj.filters
proj.windows/Debug/: vc120.idb
src/gorn/: Context.cpp  gorn.hpp
src/gorn/asset/: AssetLoader.hpp  AssetManager.hpp  CocosSpriteAtlasLoader.cpp  CocosSpriteAtlasLoader.hpp  CocosTextureAtlasLoader.cpp  CocosTextureAtlasLoader.hpp  DataAssetLoader.hpp  FileAssetLoader.hpp  FileLoader.cpp  FileLoader.hpp  FileManager.cpp  FileManager.hpp  FunctionFileLoader.cpp  FunctionFileLoader.hpp  GdxSpriteAtlasLoader.cpp  GdxSpriteAtlasLoader.hpp  GdxTextureAtlasLoader.cpp  GdxTextureAtlasLoader.hpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  ObjMeshLoader.cpp  ObjMeshLoader.hpp  ShapeMeshFactory.cpp  ShapeMeshFactory.hpp  SpriteAtlas.cpp  SpriteAtlas.hpp  SpriteRegion.cpp  SpriteRegion.hpp  TextureAtlas.cpp  TextureAtlas.hpp  asset.hpp
src/gorn/base/: Application.cpp  Application.hpp  Config.hpp  Context.cpp  Context.hpp  Data.cpp  Data.hpp  DefinitionManager.hpp  Exception.hpp  Frustum.cpp  Frustum.hpp  Log.hpp  Math.cpp  Math.hpp  Ray.cpp  Ray.hpp  Rect.cpp  Rect.hpp  Shapes.cpp  Shapes.hpp  String.cpp  String.hpp  base.hpp
src/gorn/gl/: AttributeDefinition.cpp  AttributeDefinition.hpp  AttributeKind.cpp  AttributeKind.hpp  AttributeTransformation.cpp  AttributeTransformation.hpp  Base.cpp  Base.hpp  BlendMode.cpp  BlendMode.hpp  Capabilities.cpp  Capabilities.hpp  ClearAction.cpp  ClearAction.hpp  Enums.cpp  Enums.hpp  FeatureState.cpp  FeatureState.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GlBase.cpp  GlBase.hpp  GlEnums.cpp  GlEnums.hpp  Material.cpp  Material.hpp  MaterialDefinition.cpp  MaterialDefinition.hpp  MaterialManager.cpp  MaterialManager.hpp  Program.cpp  Program.hpp  ProgramAttributeDefinition.cpp  ProgramAttributeDefinition.hpp  ProgramDefinition.cpp  ProgramDefinition.hpp  ProgramManager.cpp  ProgramManager.hpp  ProgramUniformDefinition.cpp  ProgramUniformDefinition.hpp  (+27 more)
src/gorn/label/: FntLabelAtlasLoader.cpp  FntLabelAtlasLoader.hpp  Label.cpp  Label.hpp  LabelAtlas.cpp  LabelAtlas.hpp  LabelAtlasRegion.cpp  LabelAtlasRegion.hpp  LabelCharacter.cpp  LabelCharacter.hpp  LabelDefinition.cpp  LabelFont.cpp  LabelFont.hpp  LabelManager.cpp  LabelManager.hpp
src/gorn/platform/: FileLoader.hpp  ImageLoader.hpp  LocalFileLoader.cpp  LocalFileLoader.hpp  PlatformBridge.cpp  PlatformBridge.hpp  StbImageLoader.cpp  StbImageLoader.hpp  platform.hpp
src/gorn/render/: AttributeBinding.cpp  AttributeBinding.hpp  AttributeBindingDefinition.cpp  Enums.cpp  Gl.cpp  (+69 more)
(+129 files in other folders)
